Menu entries were invisible on small screens. Fixed.

--- a/website/static/styles/main.css
+++ b/website/static/styles/main.css
@@ -29,6 +29,12 @@ body > header nav {
   color: #fff !important;
 }
 
+nav .burger ~ .menu, 
+nav .show:checked ~ .burger {
+  background-color: #448acc;
+}
+  
+
 body > header nav .brand {
   font-size: 120%;
 }
